--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,47 +4,47 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:1bueArO/kLiPD8iWx3Jb+JROwE+75B7M3QSklx20aTEysCW1MO9H7b/ba/Yr4ovLMrg9sfl2msMjBo5N0zRw1FM=,iv:+IItriuM7VdoF8jyWELxb6rOsx7FXBDI8IAjpvGBpWo=,tag:U3Gw+t1zcd8Jub/iniM7qA==,type:comment]
-    #ENC[AES256_GCM,data:xTGIIuVv1FhCDjViGtUqPime/tRZh9Nt2hpvk7ldfg1paS3OKjIj7A+vfEY=,iv:p5iDrzkhyfV7wQoiRoLCEvezEs71/+SgR3hFYD88t8g=,tag:Xy2xI/i6ckkZxj/hyZvK3w==,type:comment]
-    VIP: ENC[AES256_GCM,data:rZqZO79zNPdNtbRYnw==,iv:Cws66JzvDwxD/7wTCXehKUtCIm+RO9jITw69U0gTuYI=,tag:jQ/ehWh/lKc+SaKlPI9/6Q==,type:str]
-    #ENC[AES256_GCM,data:GYbID1HcDMNQuyewr3aqaO+Z5ZctPwQfmriR,iv:i75ET6kSnCnXwT6E5B5/yPEG08fyZU/P40p+irM30cs=,tag:Cs9n1bL4+ykIotl86eQ1LQ==,type:comment]
-    #ENC[AES256_GCM,data:B/YSVQVIJYbUUy1cu59Qo6FSe9WSdUbS6hnDjpi5H8mvxwRJQCaM/e1xMwKJwoiJCKv3LzCLbhcMm4aLXJZWKn6c3khBqHZUtc6/TuG08C00BGyIakaHIFc=,iv:tbhc92mwUdhACB5WH2XDHTK46/xWRGGPWkcFu9DQNRo=,tag:ZA+xhkVD3lYj2aqJ5PCnsQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:lNFD/1DJoBAdI25Rm44=,iv:Z5fpsdSrqGXq8S1FMt2/zRc09xHGGMj7heqX0nJsMoE=,tag:pLrzcXmp1i4kDtogLS1idA==,type:str]
-    #ENC[AES256_GCM,data:5snRSthxjmuC9THmeatH1Ij2el4B8ZUXZOX9BSi+1QynNA==,iv:J0nmYHCahGukyd/YMkcmUzP9QmUnfSLrlVPdrHZbHdA=,tag:udVhf4GBzXvr8X8h/tRuEw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:QkEuPcJ04Mq1p2chWA==,iv:Q9hct2yAZ9Rr81yL3P2UtHh0zyqzq8zQVALRvEBB32k=,tag:O9S8HcEqvNOeNELlR+eX6Q==,type:str]
-    #ENC[AES256_GCM,data:fMSX/MATA3OQYrLtS57UoWnDJoCQTtj3ICYyDBomZ3dLLBqqvTorbEcQAvVFrhk=,iv:3f7ACuhrPciGvj/V6yVK43LcdszF81+KV7bp7qm13EA=,tag:ZZ1XdVrlPah+sAYTEjJT9w==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:a7ThJUfb+YOqkDiZPgXYugev4nS2fyQcOt2SkYKl/Q==,iv:77D9EEvU4pBRmjKDEcsu0PENOEaNN6uPNJX58bY7Sqc=,tag:l08SRZfcbDgsZ4iJKBB1cg==,type:str]
-    #ENC[AES256_GCM,data:DBfkqwukObtcDtT2cMfNe79WfmcdWBLMgG6lqSudNZ1cnZBpMQtrNqSY7KAxtot7uE2mOnhDNip4dDeCk4vt94t7GhhjBOLKE0vzubEN4dlBqg==,iv:Esm2KXM3UQZRN+RRrX72Fn5I26EO6wu+SPRc+V4DSZ4=,tag:N4HEAvIQztDFZRmCd5Fj1w==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:EKLpijiHH14h3cxTPNsB,iv:/xMuN4RMJvzJhu0zi3grjkY675RPFfkMUjpYqSaQZfs=,tag:rZKjqzBK9CqFGak3nRjorg==,type:str]
-    #ENC[AES256_GCM,data:rbXwjUcUOOHcfDBgBwX1csfhen4BDV0BdkxuCRnsB7s+,iv:z/hEtwegiOOgAZ3JEPR0Wig3P9MjcRnc9IpJ1m4P/M8=,tag:hTPCBO1wHSkpdLZQ9vI0LA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:KXRQymFte7+E016ItUcD,iv:5eaAjD4CV5vxBx+Sb3BSmM3dGAucQeiQcyPzkauWPRs=,tag:TQIKKxJF60cY4rlFNuACOw==,type:str]
-    #ENC[AES256_GCM,data:HE2Vs1nbOaoEu8jrzMx8PEIyuei2ItnsGZdM7gwcTaGnljy8kmzACgpP4KxtC5Z+zKRnnQwcGoDgCf5be0nAKkYuZmvV+FVpc3TtwbEyJk4=,iv:e4hZ+XI0cE/NBfsL/W3lFyo9fVDEkBpusB8hUNj2JoI=,tag:Kj8QXhn6+UimGg3oBPSP/A==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:E8GwXv/XNhDS//MqiJ38,iv:fgcBEmG7V/WHVdH0zp7SXa63PIkMWh7DEhfPsC/wC/c=,tag:pBegX1/lFlkyHWXO7/GUQw==,type:str]
-    #ENC[AES256_GCM,data:qCxs6tip1NqxLWvSJ4BfeajYHAI2l8in0xBQmq24GIkw69krff0VsXcAf/SlR7aKuqukaNJsUZLm6Lf8JnzY4HJGoWtvY0FGAJkPJcCbpRco82FVZ0cB,iv:A9fjxKe7gWZw+pnC4oWYV47IQ2uuUKNKQmvxhF4sags=,tag:TBA/R5rFIwY1nyn4rnyVrA==,type:comment]
-    #ENC[AES256_GCM,data:TDTBGzHh5Xm4FErbdVQak7FdX33RFAecsYBpf8zSx+3S3xX8NrgNqwXjTQRLHNA0SCxmjBBsCd9F0NV2WJxvyVuQ9Ax3fWtmSR46DeiIhggJbtNy20GSgMAbPx7l33V6HOzW4+t8HzTnGmawy++olTbANo/ZbfzZRppfkg==,iv:CKOMiJwy4pBDjYzqRfVAVf2FtR2O1NScIl88DCqpirU=,tag:WlGVVtavNlZiNWw3K6tWWw==,type:comment]
-    #ENC[AES256_GCM,data:1thmZCnvmialOPixrLoQNwq7yhls8v1nsHARMA0TILf4+pMzAKPYC95v0jNaRPqRE7i4VMi3j0SrzqAmBeimS1LHEOxv6gq4zJRVcjFkFFM=,iv:+KHfaBD9vbpb510AGkKncihXEVWL2Tmi0HcnF5xpMaU=,tag:hyaT68++Avldz4GXEry3lw==,type:comment]
-    #ENC[AES256_GCM,data:0AYDbBiY2I8q2pxMN3RJqlvjI9Nw7Loc89xIFpFtlRrLxA++6iWw+otPFF/GVv4XwwqhVBkR,iv:I4EfFryp7QfrY8brMjTCo2VFzAN+7ySvww4AQ7QnYL8=,tag:oKQMLONTQRdyIdviPilhLQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:huyApBSZaTYInsJ+,iv:DBwXwyg+QTJu+3oLsPsYVFFBWBjx9jhVhBlRcTyVkYs=,tag:PO3UV3PgJ7p8Qb8SFRM62Q==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:ONQCveyIY5sg84mAjDZwFyg=,iv:LB1MC2xTjBH6F4jZiNhuNQzCncaLkSb6R3KGaeNXLKI=,tag:T5KujUJQ1MaIqTP577LhZA==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:HKJckaX8jHvazrDD0AZalD5KBtSC4GSJoTKiplbxeQg=,iv:eejvzprfv++4FFdF98fcP/t99O2cH+5QistYWwKtlMc=,tag:VQE/CB1SqpR7rJEGuWlAlw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:CNDsUXCdKHOKn5PxkwHWxp6if6NdZFA3UKzfqZhIIQqGsbo/yUZXGg==,iv:4ARdGNoX+tM2dL0t45aUcd6iXBTgzrWSmL1OdQfmZoY=,tag:dMDyiI8Bo2CA/V00U3jcbQ==,type:str]
-    #ENC[AES256_GCM,data:EJLikbyDKKqG7dsrjC/yx0LHE/bPCHgxZTg/PzZgZfldErEggNA9vyGMTiR1WHLKOcP9AAZ23Rr9JJMHiaPcEA==,iv:rIAhozcXVG05EvaA1mkauMsFjKtxigQSeTr5doLoks4=,tag:zk00k0CVlytgA/Cn2XsgcQ==,type:comment]
-    #ENC[AES256_GCM,data:mloeG/pQKfJsteBFupMRYS46ypB5unuTEKrbybAMptyDVSnA5oXR8dCcEKizmQxw8c8XAQEtgIo=,iv:tA+xVXaex07GN8r0/B+xCiRjIPSK//HFMfLjuXbemCg=,tag:8jV9/y3Z6nA6c9oT2WSQQg==,type:comment]
-    #ENC[AES256_GCM,data:XYFhl27C98EYEKKyKNZ9SltsjgcSIb38Tw==,iv:s+4RCHSJ7gdZLh+aKfZ1CICojtWqyDsldwB2Lv/qrio=,tag:oDlMC9VH1hrc3faJPUaQ0g==,type:comment]
-    #ENC[AES256_GCM,data:WZrPeg8s/x8HbjrIS8SpMg/qoYrHNJ94uvdZbuMCPM+gFEf/L96KDq+rxYjNEMy7Oma4yzByTDRr6AYt4M+R4CsCFZBhVAQLxMQV6YQ=,iv:X+H4DjOYWq3LVgyy320XLEhVK7NfqtgbPBjKfad7t0M=,tag:0q571p18diJFZr2UQnyGPg==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:OQto6jvcGBTDEfaypTAnasb96iOieienzYSdfNVaT9rPt2oa3cHRWp3q+9Pyyp7B,iv:bBzp4A1ulyHgHOv5+Z5BIZ7LKyPJxN2H4s6juSiVmjM=,tag:bbHpzZuj8/yFuuwrh+VbzA==,type:str]
-    #ENC[AES256_GCM,data:9LDy9RwLfuP38/HGc/92XrRs8f+NmPy/dWTB1n8uog8wN0hdEwX3SRF8nhl5qOssvPwI839m9bkYoirwxHfKGBocu3i499U=,iv:JB1MDyskLP44ZKY/qBXlgoEgQL88n8Vhc9+8dKq5K7I=,tag:YPBb8wFiPNLYuzJME5nmag==,type:comment]
-    #ENC[AES256_GCM,data:+QpillbG/7vvKn9/khJFuBx49UDBU8ttUXmpP1EIxwR2XfmFzEBi2hGU+asutQAWnQ262w1I,iv:EWLSKsWygJ1zvu3Kn3l02I/7FxqLayUeQ8nctAZocZI=,tag:QX8szxx53WZCc/h+JziBQA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:gGmvcRbxJg==,iv:p4Ra8FuHTbGEqMiWF+FnRbGK0BQwi/4P3KhbiN0ew9g=,tag:eOdk/k/wo3vlkGG96wZYMg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:HbVKNZETHZ/Xk1QAmqJkybPWhD4=,iv:C+qancS+YWBElRQovpwqcG4215rlBQkS5Q3aj+WbUgw=,tag:UUYUN926xFGGUrjXMXSMvQ==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:mRleFiPeLLrm1ss=,iv:qqWfTZwgAMj035d+/3SsOBDb1HgzFFOSfWZzj7tlupo=,tag:C18PiFLBwK0mlmKW7NVC5w==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:qLF6TAuB9sCToqmeqRYv,iv:f/g7KHvsVfV+VjnSKL7KC/bLSN13Au3Sdw+sGlOcJ6I=,tag:iBzfXJSxyUsqV01iUanDwg==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:IknbiLZLxiqJAiC/AorD4rBSmLVulRIgeA==,iv:xr6+qE14mCycCwK0923NN0Xnh8u82SQVQG+sOrD9dj8=,tag:ToHJksz92d3AKQ6fragORQ==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:sTbybylmfX0Kwb2hMZlc9c0RmS7CSsMl,iv:mDAoj+hWuZFDzV4BYumot5PxOlYrR2S52+of8gqo8Nk=,tag:QwTwypIUZhPwO5f1jVlzfw==,type:str]
-    #ENC[AES256_GCM,data:f+hXB+aAICQ7Ru5pBaI=,iv:zxBxuP89tmSQr0JLG7BcOjv71zLPLXWwkC+EUfhuTF0=,tag:6X4hX6azj+bLoR6cO0q4TA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:t5gAuJgU0Nmh1X5rug==,iv:G2nL35NMme/rs1XEw9P6sYtK9DvndsKsfC8fLKCv+hI=,tag:AOnlGLpUpfhSa5RuPq+OLg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:HDvf+/MYeD0ZfTl8pA==,iv:wG3/6lnj6aEL79h5VHQNcLpHwv5Ad4gfUquidsDGEic=,tag:tx/JDvAHIhos3LrjXcw4hQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:FMjDjA==,iv:HxLx5CPt8nFZO0WkAU2gbo+UloPwrQAOLrAW5PcvhDM=,tag:EPM1/CBAUN/UPclAow+k1w==,type:str]
+    #ENC[AES256_GCM,data:lv6ydnM9HDVBOGn/6Phf4GG9GWKwm7ZAPleVpo+M6tY6VB1AEnNO2FYwu7npHgW9EMhUofynHGsLSSHAVB/WL3o=,iv:AfL3twLd97yscoeyQgkD+Qcg4fv2HDuRLefLJugezJM=,tag:A5HWCQ0QM9PK93Z0tBccAw==,type:comment]
+    #ENC[AES256_GCM,data:rQcsxEmkGOIrE4I/HqCpNy1BhKpjF7xqYYu0lyF+UrXLoQuDhhQLchuMeS8=,iv:28vZerUILTtVYExMvSjotJ07WgSrd3iQQ5omS2GiYfw=,tag:l1tpgRdqMO16JX1W5S2deg==,type:comment]
+    VIP: ENC[AES256_GCM,data:ypBg8kjFOFvDJKPHmQ==,iv:KhTreNIF1nvZo+oDOMBJkZwjqjf+M0uZx6rTse2O7b0=,tag:uh5KGWJ9dXfAWna0Rlp/tw==,type:str]
+    #ENC[AES256_GCM,data:2aQwt30h4aG3Y7//wJ4+K9D6MFW/X36Z5qWD,iv:EvfHazK32mSjvLdSikRay96XfJKmI4tdpqN9J9qDMrE=,tag:MjN2tMc6xa1JsFBMNCm82g==,type:comment]
+    #ENC[AES256_GCM,data:3+XMxsd2FYV+/QyjAgXIsB/kLjM1yyjjIDRdq1mqiKzM3zr0+ORf3Lti6PQk46RIzYbLh05emr+zNRQFxwBKMrA50lUo/x4mPdjx+B0Veq90Vp7I35PCuqs=,iv:di/BD3zFkQSL+TObTg3gtYQY9AcO3SfYQpBE8jn4Sps=,tag:C2bizj3W53kZxD0U6UAAbA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:RITl0ha39TOM6ZDz8YQ=,iv:bEQMm9cR1dGbhJoo7ify37xivG1cmY/PIi+f/q1sg/0=,tag:uP4jpQZM2QYje9DNg9Mn/A==,type:str]
+    #ENC[AES256_GCM,data:rImOqpZ0740yPyMYu1oyvELag6fBZZWNpia7QtpsXAjXuA==,iv:qV2xf6PE414grbMRvoq4sOGYMsbHIqaEhHKdVWtT2Zk=,tag:Ho4SgmD29oz5u6IDTN5vIg==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:EJU/my8TLr1XTmkQ6w==,iv:LJzyc9EYtIJER8feUMBCiH/FYwtD2vXReqXt8ib0GdA=,tag:8Qn/ilNv7xQi6466Dml/dA==,type:str]
+    #ENC[AES256_GCM,data:Da1th/aL72uTvXa1pvl5m6L4sz/z+GjBrluO5foSG8YS/9N0aaYkJr2NFo0HjyM=,iv:kQl3U3vav/wEWtisxRswnJ4RsTHYY9XPdKFQUlw7xvY=,tag:i+yWyuFk3MDkwbmd8B+HRw==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:KV9Rgx3EDbUQqV9KkpkbvuuTq4UEzG2WvllIW51oYA==,iv:EjT+lFcvNGryDwNnUD2ju9JvhdNL+WQghYXWVFaguEA=,tag:ORb/DV8UsKAWrv3UThqZJw==,type:str]
+    #ENC[AES256_GCM,data:Tp3rElzFiCRX5FOc+RakuqO+qgJ5+NQ5LBWqVkIE4TDkbuU04c4Ii/gaEsn5kNV5TOr4OYl6FTwoBkAaXiusq3kLKYwte8I8UpS2oivG5XJKUw==,iv:FBS43ELfwW3xZoz5In7KOidq/V60QVv7DZ+EUr/GcfQ=,tag:1Oc+VzYD6uDubFiIcIgbUw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:8EiqLAkrw2Q3emUWtnC6,iv:wtvONyebMVpYpdLIYHdxG3pidQmEb5O4cfrm7HPdXzs=,tag:NIhZDmkylRdyHmn1FM8/AQ==,type:str]
+    #ENC[AES256_GCM,data:qpYKVmyIYTcRWFsSRUNYiVc7qU+K/DZFNdLlW+j7cAV0,iv:3roORxXs6R/cdSIss26eyoj6HaiB/1igPQuPXfIAFBY=,tag:IAFUh4Ar/9PTS2aLmd139Q==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:5eu7CKAyRcf8AuLPkQGc,iv:M7p1UZBQ+6ak0EzSC0MuPhtz/GjVn+u6EGRiPReSsig=,tag:Qcqa0rEoTmNeCh+/BJFyWg==,type:str]
+    #ENC[AES256_GCM,data:bzvSlqyZkodm33LXmViI7iH7MfAem0D8kzYsfFMTUAk0vDKxTlv1cLUCa9NibCo3pUTlWfDO9d25rO1aJlRzWSCoY80iV4J+EFdAKTzLOso=,iv:MCDq6h9EITVDLd5CGlOEXmvizLrwa7aK1z2/pWqaQV0=,tag:dzwr7vdQoq7tqbLSbNIDkw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:XuE/0ocL1B17F8CmeMLa,iv:4IjHeCPORK/f2YTOtvke17YQPs+xnJuAggsIE1zq97w=,tag:FvJtYABkf1UVgyrDosbWyQ==,type:str]
+    #ENC[AES256_GCM,data:04NG9eY6FRRL8G5PBByI9NqjyJoezDMc8iCglAH4msAa+UK6Das5jEWSUeKcvL+S6vnJU+XgO5kG88I270tkdIT/ULxCX7y1z/8nkAJiONrCyWX3PPG4,iv:e4htPk8jn0l7a/7lDVUAVBgQvxCG9UyG84mOinLnyy8=,tag:KKPBMmauktsq/hy19AMqBg==,type:comment]
+    #ENC[AES256_GCM,data:zLk7r+t9hPsLYfT/JHEXBdWP8lj9E5Ec+378cnRzQxLtou5sdnkPfNdzPWvqhbvLhdObqFH5xe/WkY/kAJSs28IkcXSA8tn18JUNt5wmttR2CzVJjxNMwxfzdfZAUdMRKvKvX8r8WbRys30MeY11ys/WKgpnhd07l3MTVQ==,iv:sSU0b5O091qj/oElaR5wkfQ/icmn/Zjzw9V5I+zeK/Q=,tag:RSds2rEwijtCS2Am0mkgFQ==,type:comment]
+    #ENC[AES256_GCM,data:+IbwdkBzui8PUBSh7NYeY63yOTY7r6GglRHEgMpV0eMgm6lHHqKe7HQUvTnBJW/fTawPOuRaVnrkL/zzFpkT+x8BvW9crfVrORRqYsxEYCc=,iv:ZluAwBUd20bnaibd9b6BECTJ92fwlZyWYI5bRF9H7XY=,tag:jom3YWfhj/JFT5JPm1o1MQ==,type:comment]
+    #ENC[AES256_GCM,data:hY2v+GWpuxJGrtcb2RNUsLuv6HbStH2APlSBJi8E5YZDf7L4j0myhS2aLABOF40MOewcO7PX,iv:HwZ7xDsKyDjgwgpyL1aEK57drZPIDjs3iCCjhcE8rDw=,tag:IPXZQ60szaAUZJ5KhcW2bg==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:pw5JCr33BkXOyjfX,iv:esUoY8/22VOQvyXgW5cyXNP6HsY3amsp+cj3kqRFItU=,tag:AWMtKBGkLZLBYj6NDHYfzg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:snOhvU+YjwlWy1ronnA8zGs=,iv:rsAgvXdtUjw8twjimwdrCoSGu2QmKBG+a/kv+CpsVus=,tag:34qsOj90fkE+dpIdPAQzlw==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:q0IHfsN65GK3o8p9b94hjcJl6BB50D/MOgQrW3ikUl4=,iv:/2lG8iAc9hOBQKRN5ys5u3lSL7id0EM3+2CEyR62Jk4=,tag:P7WSa8y9Tt/OuARqD/VsUA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:UFcxJshZJLoVjQieIct123esSfMARh3E6vFq0anJRRDfeIbIoUEFlA==,iv:B9BOKK6sL8hCtmQCdO8Z3umV8K4xlE47B9SkewnVsjo=,tag:xs18KoM3j+tfGcIo/ZgtuQ==,type:str]
+    #ENC[AES256_GCM,data:+iXYNtKFg9FybAnhLV0asu2kWYb+R8d8eCbLaKBE4uoyKPZqYHRM/aqL+2UNqwV5uVcspSwhLQHMbMOxjcBcPA==,iv:o/PRXjoCeMV2is1YUcQ/dH2wZSKf5VPcEv0s56Ray0E=,tag:jw5BFvviDg5o55dq16wtoA==,type:comment]
+    #ENC[AES256_GCM,data:LZ4ElyC7rFYzZHa4vMK2dQ+ocejzurzH1v7fxFEVdFpfrHkfALDmNTM41r91o443t64XskBapNQ=,iv:cfPIr31nnb1+QXzzWiu6ztbL2wDIZUgVQ4FLcsvrkEg=,tag:mKII3+LSRxbNrzAQv54m4w==,type:comment]
+    #ENC[AES256_GCM,data:VMxFJ+SAYFrG2qK1qQdkFMU8w+duoDz9lA==,iv:1IZgh3IvYhCj0A4vUPnzHpEqHUqwJ4bKFpqNSmrqgro=,tag:y/evJcK09p936DVZBY9HTw==,type:comment]
+    #ENC[AES256_GCM,data:uuKF3JGUHA4VasYyMQb7PQpUP9SNNYggKPJfKJrYDTyTSSC4lDcHQz++aspBpDTk1LYwJLRTkt83IRMpdKW8wcEmK7/BvRNeQWncPOI=,iv:GOgJxfUKK5Qfh25ZM+qoBR75cDpT0/p/+9oqZdN0WwI=,tag:njjKeiOT5SjCPgxHtDe+NQ==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:ugWyO9gvHosj1KschPa4nf+33HfQLG64PRjUcVcA2yKlBziUPcLog8QqkNyCVYSe,iv:KWc4ZKJpBeQiFliiyh9gYBg8PkZNApH/8JhdNp4mWtA=,tag:c6U5ufBxkb5+VEKVcnPsMQ==,type:str]
+    #ENC[AES256_GCM,data:lp2sWf/qAWeFFHOlh3pIhD17RS97fHZjUofmqax3+UvOEq8Ub+uaQj9WuTO8nPT2vWGRlfH0rHbk+znf3NLFqPSYgswt5O0=,iv:uw40Wl2jlyCwWj6kPpQnHBI0lZMX5r+f1t23Ykvt96c=,tag:JwaU+8Am+fovjKE5aKE+Xg==,type:comment]
+    #ENC[AES256_GCM,data:7T0dQxu/2FvtJ7SUUjVxdtQ+27rzVeu4yqOAyGe9lnrT4g6WeKlU2TY2Cq4uLoA1PyRaAUsF,iv:r3URXWuuu8PksG+jcaXZdGkmHV+yS5qwVhQElR9QTHg=,tag:sm3+e5xvC1BoLDWHKY3c0g==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:N2+poq0agg==,iv:CBrkUv4W0tq0ka8T7GS1nxhAvX9jdln4zmIRBtsBdV4=,tag:BgMi5CHF5958hqmm9MZGvA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:qGOZACNPzo5TKIVgafUMGvh7hho=,iv:+LWnxQaO/oLNQduRRrJHse0ZrIY6J2cC95r3BrmhNtk=,tag:QiVNea8HDHgOfnqFq+qCxQ==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:BSJmDxbb4wCMYHU=,iv:/CEDV8vwFohpZdYc/5IxHroLi5UoUCcSBbqMXX4frYk=,tag:OS8HK9XOxJslkHUsQdJkpw==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:OJ2McMZUe8nmhHL45ahZ,iv:knaAyJG0R+DKVCx+LZjeVC40ADdLpUe/6E5fQwWki+o=,tag:0Bro5nPak9dhY8laKwgAsw==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:9KC0cKPLhYFvgq8j1bKeKAHag3T/VdIU0g==,iv:Cq4MM3Yde1Bi6PhJ2TrNmPs2ZKlXUEFwqohSs3GC63A=,tag:e6huwRxS/ydhwRRJk4fAjw==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:xFTJyp3j89i0wVczTkYWFUIhkcpYU93s,iv:yItzRf8f+K18AKS+Wk25Sf8k3xyj83/pn7oBHI/74/k=,tag:htU5+5pLPJp5pDfMu5HfVQ==,type:str]
+    #ENC[AES256_GCM,data:jYP6pZB5ZjTcCtDaKGE=,iv:sMFNnVQPYpf8vTYY5ANMO8/oDr0vrlh41KuIx3UjgVA=,tag:5FH0I90rfxN6jGuLf3VUnA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:u0KhucCmuWL5vA1QMQ==,iv:Nv1H/4GP7WPfdY1uYuCpw914KUQSCTPdbwD5VxSROCM=,tag:R+XNNCZXKhAgNK7LJ+hJqg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:6+VpU/qzpG47xTxUvg==,iv:1NYg1+7UzL0RESwKaMmCO67T3eqi50/d0dy7U6McSp0=,tag:+Ax/n8YCKiGzaKkTG1r0nA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:siRtvg==,iv:0Cr5UnO6Wm/zA6+vzH5ybXC+glMvy0Be78g5gNakU74=,tag:rpAYiqSNkK0UYgBbb52hMg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -55,14 +55,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHeGZnSW51VUJDenV1K3Ro
-            NlAwTVlZeVZnTXVBVGd6Z2hYZGZDVEVtSncwCkNMU3d6bkRncXNVQXpNRG0wemF1
-            aG5kTDZsdG0ycVMyVDhzUXFoT0hZNkkKLS0tIGVuMFpwSEtDWjFjZDBJRjR3MHBF
-            SkVGLzVqb1RTblcrQStuZE9pTWlxUUkKmMcw8eWMnqs9P7vezzOoP/3QDvl9FP7b
-            dK8VB3Qvl5mLkxSwNWm/I8ILEvMF6OMZ/KaiDHor4zKExK7F6S+ROg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWSnBGc2EyR2g5TjJUSHJL
+            WmdaUVlsWWppL29xQXRWUk8xODlndmF1RkhrCnUvL3hTbEZsYVRlbzlIZnJSSGxh
+            UEoxbXZWVmhjOWRDdEpnOUZ2ei9YMlEKLS0tIHF5ZFNSeEIyUWNCb2g3ejU5b01U
+            OUFZYzFNQk1yY2h4MlQ3N1VIb3Iwd2MKSlu0hdfUY55BZY/sxn48kvkuGeamj89w
+            C4i164SqncexJmofNF/H76aGEgmsafGFFQ6VvMVj4K84oBAw/PDZyA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T01:15:35Z"
-    mac: ENC[AES256_GCM,data:QpdWhYDy2HGa78ExHNpWz5EjdNCIaMh5mJeMiZvTpA6QDNIv7El9lIMdmar44Q/7CiNmRPk8d+BfKrZFGPA09YOXuoOADBRvEWcvf7zzCP2yYyxkP1xDADUZRHn36KDj23I8zN4cgFQhjOTtmb3ZkhU0MwbTND1AnjjHlEnUiRk=,iv:MSteibBn1QtQUz4SRNaP99kkn8sgRTer//se8ivmmVg=,tag:ANe6tZSrt0qNvJ1+JCZ54A==,type:str]
+    lastmodified: "2025-01-09T03:35:31Z"
+    mac: ENC[AES256_GCM,data:A6tTCGzbr8TolZrFH3kD0vrcGX0vQtiAe3Nmc2w9Vmq49ccjCHyAQaCAl2CSszKFaL0umG4R8Hn4QdVXKuNh5E0M2gwTjvtqTMYxFk8wpYU9wQ/GDcuqrEKptLX2A3LvT/S3Fm++lOLjeMRCvkXJ1QwO8a6zx0ZvP2/nSc2ZtDs=,iv:a8bUjHAPZFedvxqfL5t1xWE3HgfdroMAyVDvqOcpxkA=,tag:naHKxiF7J4034ThuS7tHeg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
